--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "@motdotla",
   "homepage": "https://github.com/dotenvx/dotenvx-script",
   "license": "MIT",
-  "main": "src/script.js",
+  "main": "src/dotenvx.js",
   "scripts": {
     "standard": "standard",
     "standard:fix": "standard --fix",
